[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/characters/cannon/cannon.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/cannon/cannon_setup.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/other/menu_select.wav" type="AudioStream" id=3]
[ext_resource path="res://src/bullets/megaship/lemon.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/library/state machine/state_machine.gd" type="Script" id=5]
[ext_resource path="res://src/characters/cannon/cannon_stats.gd" type="Script" id=6]
[ext_resource path="res://src/characters/megaship/cannon/megaship_cannon.gd" type="Script" id=7]
[ext_resource path="res://src/library/state machine/weapon_state.gd" type="Script" id=8]
[ext_resource path="res://src/library/state machine/state.gd" type="Script" id=9]
[ext_resource path="res://src/characters/megaship/cannon/states/charged_fire.gd" type="Script" id=10]
[ext_resource path="res://src/characters/megaship/cannon/states/rapid_fire.gd" type="Script" id=11]
[ext_resource path="res://src/library/state machine/charged_weapon_state.gd" type="Script" id=12]
[ext_resource path="res://src/characters/megaship/cannon/stats/heat_stats.tres" type="Resource" id=14]

[sub_resource type="Resource" id=1]
script = ExtResource( 6 )
max_ammo = 28.0
ammo_per_shot = 0.0
cooldown = 0.1
n_cannons = 1
_cap_max_ammo = Vector2( 20, 36 )
_cap_cooldown = Vector2( 0.4, 0.16 )
_cap_n_cannons = Vector2( 1, 3 )

[node name="Cannons" type="Node2D"]
script = ExtResource( 7 )
stats = SubResource( 1 )

[node name="1" parent="." instance=ExtResource( 2 )]

[node name="CenterCannon" parent="1" instance=ExtResource( 1 )]
position = Vector2( 16, 0 )
projectile = ExtResource( 4 )

[node name="2" parent="." instance=ExtResource( 2 )]

[node name="LeftCannon" parent="2" instance=ExtResource( 1 )]
position = Vector2( 7, -4.5 )
rotation = -0.0349066
projectile = ExtResource( 4 )

[node name="RightCannon" parent="2" instance=ExtResource( 1 )]
position = Vector2( 7, 4.5 )
rotation = 0.0349066
projectile = ExtResource( 4 )

[node name="3" parent="." instance=ExtResource( 2 )]

[node name="CenterCannon" parent="3" instance=ExtResource( 1 )]
position = Vector2( 16, 0 )
projectile = ExtResource( 4 )

[node name="LeftCannon" parent="3" instance=ExtResource( 1 )]
position = Vector2( 7, -4.5 )
rotation = -0.174533
projectile = ExtResource( 4 )

[node name="RightCannon" parent="3" instance=ExtResource( 1 )]
position = Vector2( 7, 4.5 )
rotation = 0.174533
projectile = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Disabled")

[node name="RapidFire" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Mega" type="Node" parent="StateMachine/RapidFire"]
script = ExtResource( 8 )
projectile = ExtResource( 4 )

[node name="Air" type="Node" parent="StateMachine/RapidFire"]
script = ExtResource( 8 )

[node name="Bubble" type="Node" parent="StateMachine/RapidFire"]
script = ExtResource( 8 )

[node name="Quick" type="Node" parent="StateMachine/RapidFire"]
script = ExtResource( 8 )

[node name="Metal" type="Node" parent="StateMachine/RapidFire"]
script = ExtResource( 8 )

[node name="Crash" type="Node" parent="StateMachine/RapidFire"]
script = ExtResource( 8 )

[node name="ChargedFire" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Heat" type="Node" parent="StateMachine/ChargedFire"]
script = ExtResource( 12 )
weapon = 1
projectile = ExtResource( 4 )
stats = ExtResource( 14 )

[node name="Wood" type="Node" parent="StateMachine/ChargedFire"]
script = ExtResource( 12 )
weapon = 1
projectile = ExtResource( 4 )
stats = ExtResource( 14 )

[node name="Flash" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
weapon = 1
projectile = ExtResource( 4 )
stats = ExtResource( 14 )

[node name="One" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Two" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Three" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Disabled" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="SndWeaponSwap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
